# bgrem

./: build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.sql
bgremovebackend/: docker-compose.yml  requirements.txt  settings.py  urls.py  wsgi.py
bgremovebackend/bgremovebackend/: asgi.py  settings.py  urls.py
bgremovebackend/mainapp/: models.py  urls.py  views.py
bgremovebackend/mainapp/migrations/: 0001_initial.py  0002_remove_imagestoragemodel_name.py  0003_alter_imagestoragemodel_downloaded_image.py
bgremovebackend/mainapp/static/: home..js  home.css
bgremovebackend/mainapp/templates/: home.html
mainapp/: admin.py
mainapp/static/: home.css
mainapp/templates/: home.html  stopkiddingaround.html
